crates/kdl-config-derive/tests/ui/invalid_bool_mode.stderr
error: invalid bool mode, expected one of: presence+value, value-only, presence-only
 --> tests/ui/invalid_bool_mode.rs:5:24
  |
5 |     #[kdl(attr, bool = "nope")]
  |                        ^^^^^^
